--- a/WinFormsCore.Design/WinFormsCore.Design.csproj
+++ b/WinFormsCore.Design/WinFormsCore.Design.csproj
@@ -52,11 +52,13 @@
     </Compile>
     <Compile Include="..\WinFormsCore\MainForm.Designer.cs">
       <Link>MainForm.Designer.cs</Link>
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="..\WinFormsCore\MainForm.resx">
       <Link>MainForm.resx</Link>
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
